--- a/ordia/app/templates/statistics.html
+++ b/ordia/app/templates/statistics.html
@@ -74,209 +74,33 @@ ORDER BY DESC(?count)
  identifierStatisticsSparql = `
 SELECT
   ?count
-  ?description ?descriptionUrl
-  ?query
+  (?identifier_Label AS ?identifier)
+  (?identifier_Url AS ?identifierUrl)
+  (?identifier_Description AS ?identifierDescription)
+WITH {
+  SELECT 
+    (COUNT(*) AS ?count)
+    ?property 
+  WHERE {
+    ?property ^wikibase:directClaim / wdt:P31 wd:Q56216056 .
+    [] ?property [] .
+  }
+  GROUP BY ?property
+} AS %properties
 WHERE {
   {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P2581 [] . } }
-    wd:P2581 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    # BIND("../property/P2581" AS ?descriptionUrl)
-    BIND("[] wdt:P2581 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5063 [] . } }
-    wd:P5063 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    # BIND("../property/P5063" AS ?descriptionUrl)
-    BIND("[] wdt:P5063 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5274 [] . } }
-    wd:P5274 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5274" AS ?descriptionUrl)
-    BIND("[] wdt:P5274 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5275 [] . } }
-    wd:P5275 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5275" AS ?descriptionUrl)
-    BIND("[] wdt:P5275 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5497 [] . } }
-    wd:P5497 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5497" AS ?descriptionUrl)
-    BIND("[] wdt:P5497 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5533 [] . } }
-    wd:P5533 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5533" AS ?descriptionUrl)
-    BIND("[] wdt:P5533 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5627 [] . } }
-    wd:P5627 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5627" AS ?descriptionUrl)
-    BIND("[] wdt:P5627 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5720 [] . } }
-    wd:P5720 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5720" AS ?descriptionUrl)
-    BIND("[] wdt:P5720 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5793 [] . } }
-    wd:P5793 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5793" AS ?descriptionUrl)
-    BIND("[] wdt:P5793 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5844 [] . } }
-    wd:P5844 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5844" AS ?descriptionUrl)
-    BIND("[] wdt:P5844 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5876 [] . } }
-    wd:P5876 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5876" AS ?descriptionUrl)
-    BIND("[] wdt:P5876 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5877 [] . } }
-    wd:P5877 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5877" AS ?descriptionUrl)
-    BIND("[] wdt:P5877 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5902 [] . } }
-    wd:P5902 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5902" AS ?descriptionUrl)
-    BIND("[] wdt:P5902 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5903 [] . } }
-    wd:P5903 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5903" AS ?descriptionUrl)
-    BIND("[] wdt:P5903 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5912 [] . } }
-    wd:P5912 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5912" AS ?descriptionUrl)
-    BIND("[] wdt:P5912 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5928 [] . } }
-    wd:P5928 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5928" AS ?descriptionUrl)
-    BIND("[] wdt:P5928 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5937 [] . } }
-    wd:P5937 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5937" AS ?descriptionUrl)
-    BIND("[] wdt:P5937 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5938 [] . } }
-    wd:P5938 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5938" AS ?descriptionUrl)
-    BIND("[] wdt:P5938 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P5939 [] . } }
-    wd:P5939 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P5939" AS ?descriptionUrl)
-    BIND("[] wdt:P5939 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P6140 [] } }
-    wd:P6140 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P6140" AS ?descriptionUrl)
-    BIND("[] wdt:P6140 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P6168 [] } }
-    wd:P6168 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P6168" AS ?descriptionUrl)
-    BIND("[] wdt:P6168 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P6838 [] . } }
-    wd:P6838 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P6838" AS ?descriptionUrl)
-    BIND("[] wdt:P6838 []" AS ?query)
-  }
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P8478 [] . } }
-    wd:P8478 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P8478" AS ?descriptionUrl)
-    BIND("[] wdt:P8478 []" AS ?query)
-  }  
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P10831 [] . } }
-    wd:P10831 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P10831" AS ?descriptionUrl)
-    BIND("[] wdt:P10831 []" AS ?query)
-  }  
-  UNION
-  {
-    { SELECT (COUNT(*) AS ?count) { [] wdt:P10830 [] . } }
-    wd:P10830 rdfs:label ?description .
-    FILTER (LANG(?description) = 'en')
-    BIND("../property/P10830" AS ?descriptionUrl)
-    BIND("[] wdt:P10830 []" AS ?query)
-  }  
-}
+    SELECT 
+      ?count
+      ?identifier_ ?identifier_Label
+      (CONCAT("/property/", SUBSTR(STR(?identifier_), 32)) AS ?identifier_Url)
+      ?identifier_Description
+    WHERE {
+      INCLUDE %properties  
+      ?identifier_ wikibase:directClaim ?property .
+      SERVICE wikibase:label { bd:serviceParam wikibase:language "[AUTO_LANGUAGE],en". }
+    }
+  } 
+} 
 ORDER BY DESC(?count)
 `
 
