--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -109,7 +109,7 @@ ORDER BY ?word
 	  <option value="fr"{% if text_language == 'fr' %} selected="selected"{% endif %}>Français - fr - French</option>
 	  <option value="gu"{% if text_language == 'gu' %} selected="selected"{% endif %}>ગુજરાતી - gu - Gujarati</option>
 	  <option value="hi"{% if text_language == 'hi' %} selected="selected"{% endif %}>हिन्दी - hi - Hindi</option>
-	  <option value="it"{% if text_language == 'id' %} selected="selected"{% endif %}>Indonesia - id - Indonesian</option>
+	  <option value="id"{% if text_language == 'id' %} selected="selected"{% endif %}>Indonesia - id - Indonesian</option>
 	  <option value="it"{% if text_language == 'it' %} selected="selected"{% endif %}>Italiano - it - Italian</option>
 	  <option value="ja"{% if text_language == 'ja' %} selected="selected"{% endif %}>日本語 - ja - Japanese</option>
 	  <option value="kk"{% if text_language == 'kk' %} selected="selected"{% endif %}>Қазақша - kk - Kazakh</option>
