Fix #201 Link to Synia

--- a/ordia/app/templates/l.html
+++ b/ordia/app/templates/l.html
@@ -336,6 +336,10 @@ WHERE {
 	    role="button"
 	    class="btn btn-outline-dark btn-sm"
 	    href="https://www.wikidata.org/wiki/Lexeme:{{ l }}">Wikidata ↗</a>
+	 <a title="View lexeme in Synia"
+	    role="button"
+	    class="btn btn-outline-dark btn-sm"
+	    href="https://synia.toolforge.org#lexeme/{{ l }}">Synia ↗</a>
      </p>
      
      <table class="table table-hover" id="lexeme"></table>
