--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -96,6 +96,17 @@
 	    </div>
 	    
 	    <li class="nav-item">
+		<a class="nav-link" data-toggle="collapse" data-target="#nav-games">Game</a>
+	    </li>
+
+	    <div id="nav-games" class="collapse">
+		<ul class="nav navbar-nav">
+		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_guess_the_gender') }}">Guess the gender</a>
+		    </li>
+		</ul>
+	    </div>
+	    <li class="nav-item">
 		<a class="nav-link" href="{{ url_for('app.show_statistics') }}">Statistics</a>
 	    </li>
 
