Add acknowledgement to derdiedas

--- a/ordia/app/templates/guess-the-gender.html
+++ b/ordia/app/templates/guess-the-gender.html
@@ -111,7 +111,15 @@
                 <button class="btn btn-primary mx-2 my-2" onclick="makeGuess('Q1305037')">Common</button>
             </div>
         </div>
+
+	<!-- Game Result -->
         <div id="result" class="alert alert-info mt-4 d-none"></div>
+
+
+	 <!-- Acknowledgment Note -->
+        <div class="text-center mt-4">
+            <p>This game was inspired by Léa Lacroix's derdiedas game.</p>
+        </div>
     </div>
 
 
