Fix #206 Show menu in guess the gender

--- a/ordia/app/templates/guess-the-gender.html
+++ b/ordia/app/templates/guess-the-gender.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block scripts %}
+{{super()}}
 
 <script>
         const SPARQL_ENDPOINT = 'https://query.wikidata.org/sparql';
