--- a/ordia/app/templates/guess-the-gender.html
+++ b/ordia/app/templates/guess-the-gender.html
@@ -234,7 +234,7 @@
                 <option value="nb">Norsk bokmål - nb - Norwegian Bokmål</option>
                 <option value="nl">Nederlands - nl - Dutch</option>
 	        <option value="sv">Svenska - sv - Swedish</option>
-	        <option value="uk">Українська - uk - Ukranian</option>
+	        <option value="uk">Українська - uk - Ukrainian</option>
                 <!-- Add more languages as needed -->
             </select>
             <button class="btn btn-success" onclick="startNewGame()">New Game</button>
