Fix #216 Guess word from image cleanup Now with more language. Menu change Color on icons Slight code cleanup

--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -96,7 +96,7 @@
 	    </div>
 	    
 	    <li class="nav-item">
-		<a class="nav-link" data-toggle="collapse" data-target="#nav-games">Game</a>
+		<a class="nav-link" data-toggle="collapse" data-target="#nav-games">Games</a>
 	    </li>
 
 	    <div id="nav-games" class="collapse">
