--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -107,6 +107,9 @@
 		    <li class="nav-item">
 			<a class="nav-link" href="{{ url_for('app.show_guess_word_from_image') }}">Guess word from image</a>
 		    </li>
+		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_flying_dehyphenator') }}">Flying Dehyphenator</a>
+		    </li>
 		</ul>
 	    </div>
 	    <li class="nav-item">
